--- a/TRPO/TRPO.csproj
+++ b/TRPO/TRPO.csproj
@@ -109,6 +109,10 @@
     <Compile Include="users.cs">
       <DependentUpon>SkladBD.tt</DependentUpon>
     </Compile>
+    <Page Include="Dictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
