--- a/TRPO/App.config
+++ b/TRPO/App.config
@@ -9,6 +9,7 @@
   </startup>
   <connectionStrings>
     <add name="SkladBDEntities" connectionString="metadata=res://*/SkladBD.csdl|res://*/SkladBD.ssdl|res://*/SkladBD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SkladBD.mssql.somee.com;initial catalog=SkladBD;persist security info=True;user id=qrqy_SQLLogin_1;password=qx1cjlnren;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SkladBDEntitie" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SkladBD.mssql.somee.com;initial catalog=SkladBD;persist security info=True;user id=qrqy_SQLLogin_1;password=qx1cjlnren;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
