--- a/TRPO/TRPO.csproj
+++ b/TRPO/TRPO.csproj
@@ -72,7 +72,22 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="classification.cs">
-      <DependentUpon>SkladBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Pages\ListOfProductsPage.xaml.cs">
       <DependentUpon>ListOfProductsPage.xaml</DependentUpon>
@@ -84,34 +99,19 @@
       <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="position.cs">
-      <DependentUpon>SkladBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="product.cs">
-      <DependentUpon>SkladBD.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SkladBD.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SkladBD.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SkladBD.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SkladBD.tt</DependentUpon>
-    </Compile>
-    <Compile Include="SkladBD.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SkladBD.edmx</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="staff.cs">
-      <DependentUpon>SkladBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="supplier.cs">
-      <DependentUpon>SkladBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="users.cs">
-      <DependentUpon>SkladBD.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Page Include="Dictionaries\DarkTheme.xaml">
       <SubType>Designer</SubType>
@@ -171,17 +171,17 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="Model1.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>Model1.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="Model1.edmx.diagram">
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <EntityDeploy Include="SkladBD.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>SkladBD.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <None Include="SkladBD.edmx.diagram">
-      <DependentUpon>SkladBD.edmx</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -191,19 +191,31 @@
     <Resource Include="image-PhotoRoom.png-PhotoRoom.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SkladBD.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>SkladBD.Context.cs</LastGenOutput>
-      <DependentUpon>SkladBD.edmx</DependentUpon>
-    </Content>
-    <Content Include="SkladBD.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>SkladBD.edmx</DependentUpon>
-      <LastGenOutput>SkladBD.cs</LastGenOutput>
-    </Content>
+    <Resource Include="images\1.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\2.jpg" />
+    <Resource Include="images\10.jpg" />
+    <Resource Include="images\5.jpg" />
+    <Resource Include="images\6.jpg" />
+    <Resource Include="images\7.jpg" />
+    <Resource Include="images\8.jpg" />
+    <Resource Include="images\9.jpg" />
+    <Resource Include="images\3.jpg" />
+    <Resource Include="images\4.jpg" />
+    <Content Include="Model1.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>Model1.Context.cs</LastGenOutput>
+      <DependentUpon>Model1.edmx</DependentUpon>
+    </Content>
+    <Content Include="Model1.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>Model1.edmx</DependentUpon>
+      <LastGenOutput>Model1.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
